--- a/_posts/2021-04-11-test.md
+++ b/_posts/2021-04-11-test.md
@@ -8,8 +8,8 @@ read_time: true
 categories: [machinelearning]
 excerpt : "Natural Language Processing"
 header :
-    overlay_image: "https://maelfabien.github.io/assets/images/11-04-2021-test/1.png"
-    teaser : "https://maelfabien.github.io/assets/images/11-04-2021-test/2.png"
+    overlay_image: "https://harveen54.github.io/assets/images/11-04-2021-test/1.png"
+    teaser : "https://harveen54.github.io/assets/images/11-04-2021-test/2.png"
 comments : true
 toc: true
 toc_sticky: true
