--- a/_posts/2021-04-11-test copy 2.md
+++ b/_posts/2021-04-11-test copy 2.md
@@ -5,7 +5,7 @@ collection: ml
 layout: single
 author_profile: true
 read_time: true
-categories: [machinelearning]
+categories: [nlp]
 excerpt : "Natural Language Processing"
 header :
     overlay_image: "https://harveen54.github.io/assets/images/11-04-2021-test/1.png"
