--- a/_nlp/2021-04-11-test copy 2.md
+++ b/_nlp/2021-04-11-test copy 2.md
@@ -15,8 +15,8 @@ toc: true
 toc_sticky: true
 sidebar:
     nav: sidebar-sample
-permalink: /nlp/test-copy-2
-date: 2009-10-01
+# permalink: /nlp/test-copy-2
+# date: 2009-10-01
 ---
 
 # When should we use Data Augmentation?
